<?xml version="1.0"?>
<package>
  <name>ros_vosk</name>
  <version>2.1.21</version>
  <description>ROS wrapper for Vosk</description>
  <url type="website">https://pypi.python.org/pypi/vosk/</url>

  <maintainer email="contact@alphacephei.com">Alpha Cephei Inc.</maintainer>
  <license>Apache 2</license>
  <author email="contact@alphacephei.com">Alpha Cephei Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>speech_recognition_msgs</build_depend>
  <build_depend>g++-static</build_depend>

  <run_depend>audio_capture</run_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>flac</run_depend>
  <run_depend>python-vosk-pip</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>speech_recognition_msgs</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
